--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,14 +24,16 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/clothing.jar
+dist.jar=${dist.dir}/CLOTHING-LAUNDRY.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.sqlite-jdbc-3.30.1.jar=C:\\Users\\Personal-PC\\Documents\\NetBeansProjects\\gradeapp\\src\\config\\sqlite-jdbc-3.30.1.jar
 file.reference.sqlite-jdbc-3.30.1__2_.jar=C:\\Users\\PC 18\\Documents\\NetBeansProjects\\Room Rental Management Service System\\src\\Config\\sqlite-jdbc-3.30.1 (2).jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.30.1__2_.jar}
+    ${file.reference.sqlite-jdbc-3.30.1__2_.jar}:\
+    ${file.reference.sqlite-jdbc-3.30.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
