--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=CLOTHING-LAUNDRY
+application.vendor=PC 18
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,14 +27,17 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/CLOTHING-LAUNDRY.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.sqlite-jdbc-3.30.1.jar=C:\\Users\\Personal-PC\\Documents\\NetBeansProjects\\gradeapp\\src\\config\\sqlite-jdbc-3.30.1.jar
 file.reference.sqlite-jdbc-3.30.1__2_.jar=C:\\Users\\PC 18\\Documents\\NetBeansProjects\\Room Rental Management Service System\\src\\Config\\sqlite-jdbc-3.30.1 (2).jar
+file.reference.sqlite-jdbc-3.30.1__2_.jar-1=C:\\Users\\PC 18\\Documents\\regner\\clothing\\src\\config\\sqlite-jdbc-3.30.1 (2).jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqlite-jdbc-3.30.1__2_.jar}:\
-    ${file.reference.sqlite-jdbc-3.30.1.jar}
+    ${file.reference.sqlite-jdbc-3.30.1.jar}:\
+    ${file.reference.sqlite-jdbc-3.30.1__2_.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=main.LaundrySystem
+main.class=Main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
