--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,12 +32,16 @@ excludes=
 file.reference.sqlite-jdbc-3.30.1.jar=C:\\Users\\Personal-PC\\Documents\\NetBeansProjects\\gradeapp\\src\\config\\sqlite-jdbc-3.30.1.jar
 file.reference.sqlite-jdbc-3.30.1__2_.jar=C:\\Users\\PC 18\\Documents\\NetBeansProjects\\Room Rental Management Service System\\src\\Config\\sqlite-jdbc-3.30.1 (2).jar
 file.reference.sqlite-jdbc-3.30.1__2_.jar-1=C:\\Users\\PC 18\\Documents\\regner\\clothing\\src\\config\\sqlite-jdbc-3.30.1 (2).jar
+file.reference.sqlite-jdbc-3.36.0.3.jar=src\\config\\sqlite-jdbc-3.36.0.3.jar
+file.reference.sqlite-jdbc-3.45.3.0.jar=src\\config\\sqlite-jdbc-3.45.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqlite-jdbc-3.30.1__2_.jar}:\
     ${file.reference.sqlite-jdbc-3.30.1.jar}:\
-    ${file.reference.sqlite-jdbc-3.30.1__2_.jar-1}
+    ${file.reference.sqlite-jdbc-3.30.1__2_.jar-1}:\
+    ${file.reference.sqlite-jdbc-3.45.3.0.jar}:\
+    ${file.reference.sqlite-jdbc-3.36.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,7 +66,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Main.Main
+main.class=Main.LaundrySystem
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
